tests/baselines/reference/parser509667.errors.txt
parser509667.ts(4,4): error TS1003: Identifier expected.


==== parser509667.ts (1 errors) ====
    class Foo {
       f1() {
          if (this.
       }
       ~
!!! error TS1003: Identifier expected.
    
       f2() {
       }
    
       f3() {
       }
    }